--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -3,11 +3,12 @@ server {
     server_name  localhost;
 
     #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+    access_log  /usr/local/var/log/default.access.log  main;
+    error_log  /usr/local/var/log/default.error.log;
 
+    root   /var/www;
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.php index.html index.htm;
     }
 
     #error_page  404              /404.html;
@@ -27,13 +28,16 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
+    location ~ \.php$ {
+        try_files $uri =404;
+        #php56
+        #fastcgi_pass   php56:9001;
+        #php73
+        fastcgi_pass   php73:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+    }
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
