--- a/conf/php73/php/php.ini
+++ b/conf/php73/php/php.ini
@@ -910,6 +910,7 @@ extension=redis.so
 extension=zip.so
 extension=gd.so
 extension=opcache.so
+extension=swoole.so
 
 ;extension=curl
 ;extension=bz2
